[FEAT] submit table html challenges

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -11,8 +11,9 @@
 <body> 
     <H1>NATA ADUDU</H1>
     <H2>SHALTA BAGOGO</H2>
-    <P>Haloo! akuu natasyaa, lagii blajar html bersamaa ulfaa🥰 di infinite learning, diajarin <mark>kk ilham sama kk mando</mark>
+    <P>Haloo! akuu natasyaa, lagii blajar html bersamaa ulfaa🥰 di infinite learning, diajarin <mark>kk ilham dan kk mando</mark>
         SERUU SERUU SERUU🎉🎉🎉</P>
 </body>
 <p>MANTAPPU JIWAA </p>
+<a href="images html"> kembali ke images</a>
 </html>
